--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -22,6 +22,11 @@ jobs:
       ARCH: x86_64
 
     steps:
+      - name: Free up disk space
+        uses: jlumbroso/free-disk-space@v1.3.1
+        with:
+          android: false
+          tool-cache: true
       - name: Checkout repo
         uses: actions/checkout@v4
 
