--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -3,7 +3,7 @@ name: Android e2e tests
 on: [pull_request]
 jobs:
   android-e2e:
-    runs-on: blacksmith-16vcpu-ubuntu-2204
+    runs-on: blacksmith-8vcpu-ubuntu-2204
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
@@ -15,26 +15,22 @@ jobs:
       # the test run. Note that the video is limited to 3 minutes.
       DEBUG: true
       SHARDS: 1
-      ANDROID_EMULATOR_API_LEVEL: 31
+      ANDROID_EMULATOR_API_LEVEL: 30
       ANDROID_EMULATOR_PROFILE: pixel_5
+      ANDROID_EMULATOR_CORES: 4
       ANDROID_EMULATOR_RAM_SIZE: 6144
       ARTIFACTS_FOLDER: e2e-artifacts
       ARCH: x86_64
 
     steps:
-      - name: Free up disk space
-        uses: jlumbroso/free-disk-space@v1.3.1
-        with:
-          android: false
-          tool-cache: true
       - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Setup Java environment
         uses: useblacksmith/setup-java@v5
         with:
-          distribution: 'zulu'
-          java-version: '17'
+          distribution: 'corretto'
+          java-version: '22'
 
       - name: Install secret tools
         run: sudo apt install libsecret-tools
@@ -121,6 +117,7 @@ jobs:
           emulators: ${{ env.SHARDS }}
           api-level: ${{ env.ANDROID_EMULATOR_API_LEVEL }}
           profile: ${{ env.ANDROID_EMULATOR_PROFILE }}
+          cores: ${{ env.ANDROID_EMULATOR_CORES }}
           ram-size: ${{ env.ANDROID_EMULATOR_RAM_SIZE }}
           arch: ${{ env.ARCH }}
 
@@ -135,7 +132,7 @@ jobs:
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none -no-metrics
           disable-animations: false
           profile: ${{ env.ANDROID_EMULATOR_PROFILE }}
-          cores: 4
+          cores: ${{ env.ANDROID_EMULATOR_CORES }}
           ram-size: ${{ env.ANDROID_EMULATOR_RAM_SIZE }}
           script: ./scripts/e2e-android-ci.sh
 
