--- a/.github/workflows/macstadium-android-e2e.yml
+++ b/.github/workflows/macstadium-android-e2e.yml
@@ -1,6 +1,6 @@
 name: Android e2e tests
 
-on: [pull_request_target]
+on: [pull_request]
 jobs:
   android-e2e:
     runs-on: blacksmith-8vcpu-ubuntu-2204
@@ -22,10 +22,8 @@ jobs:
       ARCH: x86_64
 
     steps:
-      - name: Checkout PR
+      - name: Checkout repo
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Setup Java environment
         uses: useblacksmith/setup-java@v5
