--- a/e2e/utils/ImportWalletWithKey.yaml
+++ b/e2e/utils/ImportWalletWithKey.yaml
@@ -3,10 +3,12 @@ env:
   PKEY: ${DEV_PKEY}
   NAME: 'Test Wallet'
 ---
-- assertVisible:
-    id: welcome-screen
-    optional: true
-
+# This is usually ran as the first command so make sure it has enough time to load the app.
+- retry:
+    maxRetries: 3
+    commands:
+      - assertVisible:
+        id: welcome-screen
 - openLink: rainbow://e2e/import?privateKey=${PKEY}&name=${NAME}
 # The first time a simulator opens a link it shows a dialog.
 - runFlow:
