Wait for data to load

--- a/e2e/utils/ImportWalletWithKey.yaml
+++ b/e2e/utils/ImportWalletWithKey.yaml
@@ -19,3 +19,6 @@ env:
       - tapOn: 'Open'
 - assertVisible:
     id: wallet-screen
+# Wait for the wallet screen to load.
+- assertVisible:
+    id: receive-card
