--- a/e2e/settings/ManualBackup.yaml
+++ b/e2e/settings/ManualBackup.yaml
@@ -8,6 +8,7 @@ tags:
     clearKeychain: true
     arguments:
       isE2ETest: true
+- runFlow: ../utils/Prepare.yaml
 - runFlow: ../utils/ImportWalletWithKey.yaml
 
 # Navigate to settings and backup section
