--- a/e2e/onboarding/WatchedWallet.yaml
+++ b/e2e/onboarding/WatchedWallet.yaml
@@ -7,6 +7,7 @@ tags:
 - launchApp:
     arguments:
       isE2ETest: true
+- runFlow: ../utils/Prepare.yaml
 - tapOn: 'I already have one'
 
 # (Element not found: Text matching regex: Watch an Ethereum Address)
