--- a/e2e/screens/Discover.yaml
+++ b/e2e/screens/Discover.yaml
@@ -7,6 +7,7 @@ tags:
 - launchApp:
     arguments:
       isE2ETest: true
+- runFlow: ../utils/Prepare.yaml
 - runFlow: ../utils/ImportWalletWithKey.yaml
 
 # Check various screens exist and can be navigated to
