--- a/e2e/transactions/SwapTransaction.yaml
+++ b/e2e/transactions/SwapTransaction.yaml
@@ -7,6 +7,7 @@ tags:
 - launchApp:
     arguments:
       isE2ETest: true
+- runFlow: ../utils/Prepare.yaml
 - runFlow: ../utils/ImportWalletWithKey.yaml
 
 # Send ETH to test wallet
