--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -82,10 +82,12 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+
       - name: Cache Gradle build
         uses: useblacksmith/setup-gradle/setup-gradle@v5
         with:
-          cache-read-only: false
+          # cache-read-only: false
+          cache-write-only: true
 
       - name: Install dependencies
         env:
