--- a/e2e/screens/MaliciousDappWarning.yaml
+++ b/e2e/screens/MaliciousDappWarning.yaml
@@ -13,6 +13,8 @@ tags:
 # Navigate to browser
 - swipe:
     direction: LEFT
+- assertVisible:
+    id: discover-header
 - swipe:
     direction: LEFT
 - assertVisible:
