--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
       android:requestLegacyExternalStorage="true"
       android:resizeableActivity="false"
       tools:ignore="GoogleAppIndexingWarning"
+      android:taskAffinity=""
     >
       <meta-data
           android:name="com.google.mlkit.vision.DEPENDENCIES"
