--- a/.github/workflows/macstadium-ios-e2e.yml
+++ b/.github/workflows/macstadium-ios-e2e.yml
@@ -9,7 +9,7 @@ jobs:
   # Job to install dependencies
   install-deps:
     runs-on: ["self-hosted"]
-    concurrency: 
+    concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
     permissions:
@@ -74,7 +74,7 @@ jobs:
 
       - name: Set up github keys
         run: git config core.sshCommand "ssh -i ~/.ssh/id_ed25519 -F /dev/null"
-        
+
       - name: Set sanitized branch name
         id: sanitize
         run: echo "SANITIZED_REF_NAME=${GITHUB_REF_NAME//\//-}" >> $GITHUB_ENV
@@ -90,7 +90,7 @@ jobs:
           source ~/.zshrc
           git clone git@github.com:rainbow-me/rainbow-env.git
           mv rainbow-env/dotenv .env && rm -rf rainbow-env
-          eval $CI_SCRIPTS      
+          eval $CI_SCRIPTS
       - name: Install dependencies
         run: |
           yarn install && yarn setup
@@ -113,20 +113,22 @@ jobs:
   # iOS build and e2e tests
   e2e-ios:
     runs-on: ["self-hosted"]
-    concurrency: 
-      group: ${{ github.workflow }}-${{ github.ref }}
+    concurrency:
+      group: e2e-ios-${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
     permissions:
       contents: read
     timeout-minutes: 90
     needs: install-deps
+    env:
+      ARTIFACTS_FOLDER: e2e-artifacts
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Set up github keys
         run: git config core.sshCommand "ssh -i ~/.ssh/id_ed25519 -F /dev/null"
-      
+
       - name: Set sanitized branch name
         id: sanitize
         run: echo "SANITIZED_REF_NAME=${GITHUB_REF_NAME//\//-}" >> $GITHUB_ENV
@@ -147,9 +149,6 @@ jobs:
         run: |
           yarn install && yarn setup
 
-      - name: Rebuild detox cache
-        run: ./node_modules/.bin/detox clean-framework-cache && ./node_modules/.bin/detox build-framework-cache
-
       - name: Version debug
         run: |
           npx react-native info
@@ -158,22 +157,32 @@ jobs:
         run: |
           rm -rf /Users/administrator/.cocoapods/repos/cocoapods/.git/index.lock
           yarn install-bundle && yarn install-pods
-      
+
       - uses: irgaly/xcode-cache@v1
         with:
           key: xcode-cache-deriveddata-${{ github.workflow }}-${{ github.sha }}
           restore-keys: xcode-cache-deriveddata-${{ github.workflow }}-
-      
+
+      - name: Install Maestro
+        run: export MAESTRO_VERSION=1.39.13; curl -fsSL "https://get.maestro.mobile.dev" | bash
+
       - name: Modify env and build app in release mode
         run: |
-          sed -i'' -e "s/IS_TESTING=false/IS_TESTING=true/" .env && rm -f .env-e 
-          yarn detox build --configuration ios.sim.release
-      - name: Detox iOS e2e tests serial
-        run: |
-          ./scripts/run-serial-e2e.sh 3
+          sed -i'' -e "s/IS_TESTING=false/IS_TESTING=true/" .env && rm -f .env-e
+          ./scripts/e2e-ios-build.sh
+      - uses: futureware-tech/simulator-action@v4
+        id: simulator
+        with:
+          model: 'iPhone 16'
+          wait_for_boot: true
+      - name: Run Tests
+        run: ./scripts/e2e-ios-ci.sh
+        env:
+          DEVICE_UDID: ${{ steps.simulator.outputs.udid }}
 
-      - name: Detox iOS e2e tests parallel
-        run: |
-          ./scripts/run-parallel-e2e.sh
-
-     
+      - name: Upload artifacts
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: artifacts
+          path: ${{ env.ARTIFACTS_FOLDER }}
