--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "android:load-apk": "adb install android/app/build/outputs/apk/release/app-release.apk",
     "android-all:load-apk": "yarn adb-all install android/app/build/outputs/apk/release/app-release.apk",
     "graphql-codegen:install": "cd src/graphql && yarn install",
-    "graphql-prepare": "sh ./scripts/graph-ens-key.sh",
+    "graphql-prepare": "./scripts/graph-ens-key.sh",
     "graphql-codegen": "yarn graphql-prepare && cd src/graphql && yarn codegen",
     "check-lockfile": "./scripts/check-lockfile.sh",
     "clean:android": "yarn uninstall:android && rm -rf android/build && yarn gradle clean && rm -rf ~/.gradle/caches",
@@ -22,13 +22,6 @@
     "clean:node": "rm -rf node_modules",
     "nuke": "./scripts/nuke.sh",
     "rc-push": "./scripts/rc-push.sh",
-    "detox:android:release": "detox build -c android.emu.release && detox test -c android.emu.release",
-    "detox:android:tests": "detox test -c android.emu.debug --maxWorkers 2 -- --bail 1",
-    "detox:android": "detox build -c android.emu.debug && yarn detox:android:tests",
-    "detox:ios:build": "detox build -c ios.sim.debug | xcpretty --color ",
-    "detox:ios:tests": "detox test -c ios.sim.debug --maxWorkers 2 -- --bail 1",
-    "detox:ios": "yarn detox:ios:build && yarn detox:ios:tests",
-    "detox:ios:release": "detox build -c ios.sim.release && detox test -c ios.sim.release --maxWorkers 2 -- --bail 1",
     "ds:install": "cd src/design-system/docs && yarn install",
     "ds": "cd src/design-system/docs && yarn dev",
     "fast": "yarn install && yarn setup && yarn install-pods-fast",
@@ -275,13 +268,13 @@
     "react-native-text-size": "rainbow-me/react-native-text-size#15b21c9f88c6df0d1b5e0f2ba792fe59b5dc255a",
     "react-native-tooltip": "rainbow-me/react-native-tooltip#e0e88d212b5b7f350e5eabba87f588a32e0f2590",
     "react-native-tooltips": "rainbow-me/react-native-tooltips#fdafbc7ba33ee231229f5d3f58b29d0d1c55ddfa",
-    "react-native-turbo-haptics": "1.0.4",
+    "react-native-turbo-haptics": "1.0.5",
     "react-native-udp": "2.7.0",
     "react-native-url-polyfill": "2.0.0",
     "react-native-version-number": "0.3.6",
     "react-native-video": "6.3.0",
     "react-native-view-shot": "4.0.2",
-    "react-native-vision-camera": "4.4.2",
+    "react-native-vision-camera": "4.6.4",
     "react-native-webview": "13.8.2",
     "react-native-widgetkit": "1.0.9",
     "react-navigation-backhandler": "2.0.1",
