Add clearKeychain for Maestro tests

--- a/e2e/onboarding/CreateWallet.yaml
+++ b/e2e/onboarding/CreateWallet.yaml
@@ -3,8 +3,9 @@ tags:
   - auth
   - parallel
 ---
-- clearState
 - launchApp:
+    clearState: true
+    clearKeychain: true
     arguments:
       isE2ETest: true
 - runFlow: ../utils/Prepare.yaml
