--- a/e2e/screens/Discover.yaml
+++ b/e2e/screens/Discover.yaml
@@ -3,8 +3,9 @@ tags:
   - discover
   - parallel
 ---
-- clearState
 - launchApp:
+    clearState: true
+    clearKeychain: true
     arguments:
       isE2ETest: true
 - runFlow: ../utils/Prepare.yaml
