--- a/e2e/screens/MaliciousDappWarning.yaml
+++ b/e2e/screens/MaliciousDappWarning.yaml
@@ -3,8 +3,9 @@ tags:
   - browser
   - parallel
 ---
-- clearState
 - launchApp:
+    clearState: true
+    clearKeychain: true
     arguments:
       isE2ETest: true
 - runFlow: ../utils/Prepare.yaml
@@ -31,8 +32,8 @@ tags:
       # tap on browser search input
       - tapOn:
           point: 80, 80
-      - assertVisible: 'Find apps and more'
-      - inputText: 'https://test-dap-welps.vercel.app/'
+      - assertVisible: "Find apps and more"
+      - inputText: "https://test-dap-welps.vercel.app/"
 
       # tap on connect button
       - tapOn:
@@ -46,5 +47,5 @@ tags:
       - assertVisible:
           id: malicious-dapp-warning
 
-      - assertVisible: 'Find apps and more'
-      - inputText: 'https://test-dap-welps.vercel.app/'
+      - assertVisible: "Find apps and more"
+      - inputText: "https://test-dap-welps.vercel.app/"
