--- a/.github/workflows/macstadium-builds.yml
+++ b/.github/workflows/macstadium-builds.yml
@@ -46,7 +46,8 @@ jobs:
             .yarn/cache
             .yarn/install-state.gz
             !.eslintcache # Exclude eslint cache
-          key: ${{ runner.os }}-yarn-${{ github.sha }}  # Cache per commit
+          # key: ${{ runner.os }}-yarn-${{ github.sha }}  # Cache per commit
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}  
           restore-keys: |
             ${{ runner.os }}-yarn-
 
@@ -60,14 +61,15 @@ jobs:
 
       - name: Install pods
         run: |
-          rm -rf /Users/administrator/.cocoapods/repos/cocoapods/.git/index.lock
+          # rm -rf /Users/administrator/.cocoapods/repos/cocoapods/.git/index.lock
           yarn install-bundle && yarn install-pods
 
       - uses: irgaly/xcode-cache@v1
         with:
-          key: xcode-cache-deriveddata-${{ github.workflow }}-${{ github.sha }}
+          # key: xcode-cache-deriveddata-${{ github.workflow }}-${{ github.sha }}
+          key: xcode-cache-deriveddata-${{ github.workflow }}-${{ hashFiles('**/*.xcodeproj') }}
           restore-keys: xcode-cache-deriveddata-${{ github.workflow }}-
-        
+         
         # TOPHAT iOS SIM   
       - name: Build the app in release mode for simulator
         run: |
@@ -88,7 +90,8 @@ jobs:
           FASTLANE_PASSWORD: ${{ secrets.FASTLANE_PASSWORD }}
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
         run: |
-            cd ios && gem update fastlane && bundle exec fastlane ios build_device
+            # cd ios && gem update fastlane && bundle exec fastlane ios build_device
+            cd ios && bundle exec fastlane ios build_device
       - name: Upload builds to AWS S3
         env:
           AWS_BUCKET: rainbow-app-team-production
