--- a/.github/workflows/macstadium-ios-e2e.yml
+++ b/.github/workflows/macstadium-ios-e2e.yml
@@ -147,7 +147,7 @@ jobs:
           eval $CI_SCRIPTS
       - name: Install dependencies
         run: |
-          yarn install --frozen-lockfile && yarn setup
+          yarn install --immutable && yarn setup
 
       - name: Version debug
         run: |
