Fix e2e ios tests

--- a/e2e/onboarding/WatchedWallet.yaml
+++ b/e2e/onboarding/WatchedWallet.yaml
@@ -9,10 +9,11 @@ tags:
     arguments:
       isE2ETest: true
 - runFlow: ../utils/Prepare.yaml
-- tapOn: 'I already have one'
+- tapOn: '.*I already have one'
 
 # (Element not found: Text matching regex: Watch an Ethereum Address)
-- tapOn: 'Watch a wallet'
+- tapOn:
+    id: watch-address-button
 - tapOn: 'Enter an Ethereum address or ENS name'
 - inputText: 'rainbowtestwallet.eth'
 - tapOn: 'Continue'
