--- a/e2e/onboarding/CreateWallet.yaml
+++ b/e2e/onboarding/CreateWallet.yaml
@@ -11,7 +11,7 @@ tags:
 - runFlow: ../utils/Prepare.yaml
 - assertVisible:
     id: welcome-screen
-- tapOn: 'Get a new wallet'
+- tapOn: '.*Get a new wallet'
 - runFlow: ../utils/MaybeSetupPin.yaml
 
 # Check wallet screen exists and has expected elements
